--- a/DamacanaWebApi/DamacanaWebApi/Web.config
+++ b/DamacanaWebApi/DamacanaWebApi/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-DamacanaWebApi-20151222114446.mdf;Initial Catalog=aspnet-DamacanaWebApi-20151222114446;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="DamacanaWebApiContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=DamacanaWebApiContext-20151223014734; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|DamacanaWebApiContext-20151223014734.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
